<resources>
    <string name="app_name">PayJal</string>
    <string name="start">START</string>
    <string name="safe_water_is_just_a_tap_away">SAFE WATER IS JUST A TAP AWAY</string>
    <string name="water_at_your_convenience_just_a_tap_away">WATER AT YOUR CONVENIENCE. JUST A TAP AWAY!</string>
    <string name="tap">TAP</string>
    <string name="supplier">SUPPLIER?</string>
    <string name="customer">CUSTOMER?</string>
    <string name="ar">ARE YOU......</string>
    <string name="existing_user_please_login">Existing User?Please Login</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="exisiting_user">Exisiting User?</string>
    <string name="please_register">Please Register</string>
    <string name="please_login">Please Login</string>
    <string name="new_user">New User?</string>
    <string name="email_id">Email id</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="companyname">CompanyName</string>
    <string name="existing_supplier">Existing Supplier?</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="delete_product">Delete Product</string>
    <string name="view_product">View Product</string>
    <string name="click">Click</string>
    <string name="order">Order</string>
    <string name="next">Next</string>
    <string name="name_of_the_product">Name of the Product</string>
    <string name="enter_pincode_here">Enter Pincode Here</string>
    <string name="pincode">Pincode</string>
    <string name="order_product_here">Order Product Here</string>
    <string name="address">Address</string>
    <string name="Pymmentmode">PAYMENT MODE</string>
    <string name="pay_now">PAY NOW</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="phonepay">PhonePay</string>
    <string name="upi">UPI</string>
    <string name="view_suppliers">VIEW SUPPLIERS</string>
    <string name="invalid_name">INVALID NAME</string>
    <string name="invalid_mobile">INVALID MOBILE NUMBER</string>
    <string name="invalid_password">INVALID PASSWORD</string>
    <string name="inavalid_confirm_password">INVALID CONFIRM PASSWORD</string>
    <string name="ok">OK</string>

</resources>